Fix deploy to github pages

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,7 +6,7 @@ on:
       ['main']
 
 jobs:
-  build-and-check:
+  build-check-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,3 +20,8 @@ jobs:
             exit 1
           fi
     
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
